--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,53 +1,46 @@
-.login-form {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  justify-content: center;
+.login-form-tdm{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: white;
+    color: black;
 }
 
-.login__header {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-bottom: 50px;
+.login-tdm{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
 }
 
-.login__header img {
-  width: 100px;
+.login-input{
+    border: 2px solid black;
+    border-radius: 30px;
+    color: black;
+    font-size: 1em;
+    margin-bottom: 15px;
+    max-width: 300px;
+    outline: none;
+    padding: 15px;
+    width: 100%;
 }
 
-.login__header h1 {
-  color: #333;
-  font-size: 1.5em;
+.login-button{
+    background-color: black;
+    border-radius: 30px;
+    color: white;
+    cursor: pointer;
+    font-size: 1em;
+    max-width: 150px;
+    padding: 15px;
+    width: 50%;
 }
 
-.login__input {
-  border: 2px solid #333;
-  border-radius: 8px;
-  color: #333;
-  font-size: 1em;
-  margin-bottom: 15px;
-  max-width: 300px;
-  outline: none;
-  padding: 15px;
-  width: 100%;
-}
-
-.login__button {
-  background-color: #ee665c;
-  border-radius: 8px;
-  color: #fff;
-  cursor: pointer;
-  font-size: 1em;
-  max-width: 300px;
-  padding: 15px;
-  width: 100%;
-}
-
-.login__button:disabled {
-  background-color: #eee;
-  color: #aaa;
-  cursor: auto;
+.login-button:disabled{
+    background-color: grey;
+    color: white;
+    cursor: auto;
 }
